<resources>
    <string name="app_name">Demo1</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="guest">Log in as Guest</string>
    <string name="number">10,000</string>
    <string name="train">Train</string>
    <string name="market">Market</string>
    <string name="map">Map</string>
    <string name="menu">Battle</string>
    <string name="buy">Buy</string>
    <string name="troop">Train Troops</string>
</resources>
