<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scroll3"
    tools:context="com.example.shirley.demo1.Map">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="343dp"
        app:srcCompat="@drawable/china"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.366"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription=""
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.384" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/market_navbar"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintVertical_bias="0.844"
        app:srcCompat="@drawable/orangebutton"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintTop_toTopOf="@+id/navbar" />

    <ImageButton
        android:id="@+id/battle_navbar"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toTopOf="@+id/navbar"
        app:layout_constraintVertical_bias="0.844"
        app:srcCompat="@drawable/orangebutton"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/train_navbar"
        android:layout_width="65dp"
        android:layout_height="38dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/orangebutton" />

    <ImageButton
        android:id="@+id/map_navbar"
        android:layout_width="64dp"
        android:layout_height="38dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/orangebutton" />

    <RelativeLayout
        android:id="@+id/items"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/red"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/coin1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginStart="127dp"
            android:layout_toEndOf="@+id/imageView"
            app:srcCompat="@drawable/popu" />

        <TextView
            android:id="@+id/numofcoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/number"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/numofppl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/number"
            android:textSize="28sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/map"
        android:layout_width="33dp"
        android:layout_height="19dp"
        android:text="@string/map"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintVertical_bias="0.438"
        tools:textStyle="bold"
        android:layout_marginRight="3dp"
        android:layout_marginEnd="3dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/navbar"
        app:layout_constraintTop_toTopOf="@+id/navbar" />

    <TextView
        android:id="@+id/train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/market_navbar"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/market_navbar"
        android:layout_marginBottom="3dp" />

    <TextView
        android:id="@+id/battle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/market_navbar"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/market_navbar"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="2dp"
        app:layout_constraintVertical_bias="0.492"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="2dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985"
        android:layout_marginRight="9dp"
        android:layout_marginEnd="9dp" />

    <Button
        android:id="@+id/battle1"
        android:layout_width="88dp"
        android:layout_height="53dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


</android.support.constraint.ConstraintLayout>
