<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scroll3"
    tools:context="com.example.shirley.demo1.Train">


    <EditText
        android:id="@+id/editText3"
        android:layout_width="48dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.91"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.196"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="48dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.298" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="48dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="0.128" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="66dp"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/navbar"
        app:layout_constraintVertical_bias="0.844"
        app:srcCompat="@drawable/orangebutton"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="66dp"
        android:layout_height="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/navbar"
        app:layout_constraintVertical_bias="0.844"
        app:srcCompat="@drawable/orangebutton" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="65dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/orangebutton"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="64dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/orangebutton"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <RelativeLayout
        android:id="@+id/items"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/red"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/coin1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginStart="127dp"
            android:layout_toEndOf="@+id/imageView"
            app:srcCompat="@drawable/popu" />

        <TextView
            android:id="@+id/numofcoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/number"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/numofppl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/number"
            android:textSize="28sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/map"
        android:layout_width="33dp"
        android:layout_height="19dp"
        android:text="@string/map"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/navbar"
        app:layout_constraintVertical_bias="0.438"
        tools:textStyle="bold"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="3dp"
        android:layout_marginEnd="3dp" />

    <TextView
        android:id="@+id/train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        android:layout_marginBottom="3dp" />

    <TextView
        android:id="@+id/battle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="2dp"
        app:layout_constraintVertical_bias="0.492"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="2dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintLeft_toRightOf="@+id/navbar"
        app:layout_constraintRight_toLeftOf="@+id/navbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985"
        android:layout_marginRight="9dp"
        android:layout_marginEnd="9dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.177" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="51dp"
        app:srcCompat="@drawable/archer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.259" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="52dp"
        android:layout_height="45dp"
        app:srcCompat="@drawable/horse"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.571"
        app:layout_constraintHorizontal_bias="0.183" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="33dp"
        android:layout_height="52dp"
        app:srcCompat="@drawable/person"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.516"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="39dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/swordman"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.064"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/imageView6"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        android:layout_marginBottom="79dp"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.742" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.822" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toRightOf="@+id/editText3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toRightOf="@+id/editText3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toRightOf="@+id/editText3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items"
        app:layout_constraintVertical_bias="0.28" />


</android.support.constraint.ConstraintLayout>
